2009-09-03  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	reviewed by: Arek

	* flumotion/component/bouncers/icalbouncer.py:
	* flumotion/component/consumers/disker/disker.py:
	Catch more (possible) exceptions from the icalendar module
	Fixes #1267

2009-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/componentlist.py:
	  Remove unused variable. Thanks to Arek for spotting.

2009-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	reviewed by: Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/admin/gtk/adminwindow.py:
	* flumotion/admin/gtk/componentlist.py:
	  Allow deletion of sleeping components with no worker logged in.
	  canStart == (canDelete && workers logged in).
	  Fixes #1348.

2009-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/componentlist.py:
	  Fix/normalize docstrings.

2009-08-28  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/misc/porter/porter.py:
	Fix initialisation of porter.

2009-08-26  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	reviewed by: xmartinez/jan 

	* flumotion/component/misc/httpserver/httpfile.py:
	avoid leaking of sockets in CLOSE_WAIT state
	solves #1327

2009-08-26  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	patch by: Jan Urbanski

	* flumotion/component/misc/porter/porter.py:
	* flumotion/component/misc/porter/porter.xml:
	Add external-interface property for porter.

2009-08-25  Alvin Delagon  <adelagon@flumotion.com>

	reviewed by: Zaheer Abbas Merali

	* flumotion/twisted/integration.py:
	Use tempfile.mkdtemp instead when making testDirs. Fixes #1347.

2009-08-21  Jan Urbanski  <jurbanski@flumotion.com>

	* configure.ac:
	Start the new development series.

2009-08-21  Jan Urbanski  <jurbanski@flumotion.com>

	* configure.ac:
	Back to dev.

=== release 0.6.0 ===

2009-08-21  Jan Urbanski  <jurbanski@flumotion.com>

	* NEWS:
	* RELEASE:
	* configure.ac: