@@ -1,3 +1,10 @@
+2009-09-07  Julien Le Goff  <jlegoff@flumotion.com>
+
+	reviewed by: Jan
+
+	* flumotion/monitor/nagios/stream.py:
+	Use the timeout option.
+
 2009-09-03  Guillaume Quintard  <guillaume.quintard@flumotion.com>
 
 	reviewed by: Arek
